# andorid_shared_texture

./: README.md  build.gradle  gradlew.bat  settings.gradle
App/: build.gradle
App/src/androidTest/java/com/example/render/: ExampleInstrumentedTest.java
App/src/main/: AndroidManifest.xml
App/src/main/assets/shaders/: client.frag  client.vert
App/src/main/cpp/: CMakeLists.txt
App/src/main/cpp/client/: CMakeLists.txt  Main.cpp
App/src/main/cpp/client/glm/gtx/: string_cast.hpp
App/src/main/cpp/client/renderer/: ClientRenderer.cpp  ClientRenderer.h
App/src/main/cpp/lorie/: CMakeLists.txt  android.cpp  client.cpp  client.h  local_render.c  local_renser.h  server.c  server.cpp  server.h
App/src/main/cpp/server/: CMakeLists.txt  Main.cpp
App/src/main/cpp/server/inc/: LogUtil.h
App/src/main/cpp/server/renderer/: ServerRenderer.h  initOutput.c  lorie.h  renderer.c  renderer.h
App/src/main/java/com/example/render/: MainActivity.java  RenderSurface.java
App/src/main/res/layout/: activity_main.xml
App/src/main/res/values/: strings.xml  themes.xml
App/src/main/res/values-night/: themes.xml
App/src/main/res/values-v23/: themes.xml
Common/src/main/aidl/com/example/: IMyService.aidl
RendererClient/: build.gradle
RendererClient/src/main/: AndroidManifest.xml
RendererClient/src/main/assets/shaders/: lut.frag
RendererClient/src/main/cpp/: CMakeLists.txt  Main.cpp  ShaderUtil.h  native-lib.cpp  renderer.cpp  renderer.h
RendererClient/src/main/cpp/inc/: LogUtil.h
RendererClient/src/main/cpp/renderer/: ClientRenderer.cpp  ClientRenderer.h
RendererClient/src/main/java/com/example/ndkbinderclient/: MainActivity.java  NativeEglRender.java
RendererClient/src/main/res/layout/: activity_main.xml
RendererClient/src/main/res/values/: strings.xml
RendererServer/: build.gradle
RendererServer/src/main/: AndroidManifest.xml
RendererServer/src/main/assets/shaders/: server.frag
RendererServer/src/main/cpp/: CMakeLists.txt  Main.cpp
RendererServer/src/main/cpp/inc/: ShaderUtil.h
RendererServer/src/main/cpp/renderer/: ServerRenderer.cpp  ServerRenderer.h  render.cpp  render.h
RendererServer/src/main/res/values/: strings.xml
RendererService/: build.gradle
RendererService/src/main/: AndroidManifest.xml
RendererService/src/main/assets/shaders/: server.vert
RendererService/src/main/cpp/: Main.cpp  MyService.cpp  MyService.h  native-lib.cpp
RendererService/src/main/cpp/inc/: LogUtil.h
RendererService/src/main/cpp/renderer/: ServerRenderer.cpp
RendererService/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
